Translations for every view and emailer

--- a/app/views/activities/_user_add.haml
+++ b/app/views/activities/_user_add.haml
@@ -1,3 +1,2 @@
 activity.activity_user_add
-  = activity.target.login
-  was added to the project.
+  = t('.added_to_project', :user => activity.target.login)
