--- a/app/views/activities/_user_remove.haml
+++ b/app/views/activities/_user_remove.haml
@@ -1,3 +1,2 @@
 activity.activity_user_remove
-  = activity.target.login
-  was removed from the project.
+  = t('.removed_from_project', :user => activity.target.login)
