--- a/app/views/comments/_settings.haml
+++ b/app/views/comments/_settings.haml
@@ -3,7 +3,7 @@
     Comments Settings
   .toggle
     =comments_ascending_user_link
-    or
+    = t('common.or')
     =comments_descending_user_link
   .filters
     .radio_button.uploads
