--- a/app/views/dividers/_edit.haml
+++ b/app/views/dividers/_edit.haml
@@ -3,8 +3,8 @@
     = divider_fields(f)
     .submit{ :id => "divider_submit_#{divider.id}" }
       = f.submit t('.submit')
-      or
-      = link_to_function 'Cancel', remove_form("divider_#{divider.id}")
+      = t('common.or')
+      = link_to_function t('common.cancel'), remove_form("divider_#{divider.id}")
     =loading('divider_form',divider.id)
     .clear  
   .clear  
