--- a/app/views/emailer/reset_password.haml
+++ b/app/views/emailer/reset_password.haml
@@ -1,24 +1,20 @@
-.email{ :style => 'font-size: 12px; color: rgb(0,0,0); font-family: Helvetica, Arial' }
+.email{ :style => email_global }
+  %p{ :style => email_text(:small) }
+    = t('emailer.common.do_not_answer')
 
-  %p{ :style => 'font-size: 12px; color: rgb(100,100,100)' }
-    = "Hey, #{@user.name}!"
+  %p= t('emailer.reset_password.hey', :user_name => @user.name)
 
-  %p{ :style => 'font-size: 14px; color: rgb(50,50,50)' }
-    = "In order to <b>set a new password</b> for Teambox, we need you to log in with the following link:"
+  .box{ :style => email_box }  
+    %p= t('emailer.reset_password.follow_the_link')
+    %h2{ email_text(:big) }
+      = link_to t('emailer.reset_password.log_in'), @login_link
 
-  %h2{ :style => 'font-size: 20px; color: rgb(0,0,0)' }
-    = link_to "Log into Teambox now!", @login_link
-
-  %p{ :style => 'font-size: 14px; color: rgb(50,50,50)' }
-    = "If this doesn't work, copy and paste the following link in your browser's bar:"
+  %p{ :style => email_text(:small) }
+    = t('emailer.reset_password.plaintext_link')
     %br
     = link_to @login_link, @login_link
 
-  .footer{ :style => 'font-size: 10px; color: rgb(100,100,100)' }
-    %p
-      = "You receive this message because you signed up for a Teambox account with #{@user.email}"
-
-    %p
-      = "If you have any problems, please contact us at"
-      = link_to "http://teambox.tenderapp.com", "http://teambox.tenderapp.com"
+  .footer{ :style => email_text(:small) }
+    %p= t('emailer.reset_password.report_abuse', :email => @user.email)
+    %p= t('emailer.reset_password.problems')
 
