--- a/app/views/people/index.haml
+++ b/app/views/people/index.haml
@@ -2,11 +2,11 @@
   &nbsp;
   
 - form_for [@current_project,Invitation.new], :person do |f|
-  %h2 Invite people
+  %h2= t('.invite_people')
   = hidden_field_tag 'people','true'
   = f.label :user_or_email, t('.enter_username_or_email')
   = f.text_field :user_or_email
-  = f.submit 'Invite'
+  = f.submit t('.invite')
 
 .people
   = list_people(@current_project.people)
