--- a/app/views/tasks/_fields.haml
+++ b/app/views/tasks/_fields.haml
@@ -2,6 +2,6 @@
   = f.text_field :name, :class => 'focus'
 - unless task.new_record?
   .assigned.select
-    =f.label :assigned_id, "Assigned to:"
+    = f.label :assigned_id, t('.assigned_to')
     = f.select :assigned_id, project.people.map {|p| [ p.name, p.id ]}, { :include_blank => true }
 
