--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -96,7 +96,7 @@ iframe.upload_form
   
 .index_uploads
   .content
-    :padding 10px
+    :padding 0px
   form.new_upload
     :padding 5px
     .text_field
@@ -107,6 +107,7 @@ iframe.upload_form
     .file     
       label
         :font-size 12px
+        :display block
       input
         :width 200px
         :margin-bottom 15px
