--- a/app/views/notes/_fields.haml
+++ b/app/views/notes/_fields.haml
@@ -1,6 +1,6 @@
 .name.text_field
-  = f.label :name, 'Title'
+  = f.label :name, t('.title')
   = f.text_field :name, :class => 'focus'
 .body.text_area
-  = f.label :body
+  = f.label :body, t('.body')
   = f.text_area :body
