--- a/app/views/uploads/_edit.haml
+++ b/app/views/uploads/_edit.haml
@@ -2,7 +2,7 @@
   - remote_form_for upload, :url => project_upload_path(project,upload) do |f|
     .filename_edit
       = f.text_field :filename, :class => "upload_filename"
-      = f.submit 'Save', :id => "save_upload_#{upload.id}"
+      = f.submit t('common.save'), :id => "save_upload_#{upload.id}"
       = cancel_edit_link upload
       = loading('update',upload.id)
     .description_edit
