--- a/app/views/uploads/new_upload.haml
+++ b/app/views/uploads/new_upload.haml
@@ -2,11 +2,11 @@
   = error_messages_for :upload
   - form_for [@current_project,@upload], :html => { :multipart => true } do |f|
     .file
-      Select a file to upload
+      = t('uploads.new_upload.select_file')
       %br
       = f.file_field :file, :size => 40
     .description
-      = f.label :description
+      = f.label :description, t('uploads.new_upload.description')
       %br
       = f.text_field :description
-    = submit_tag 'Upload'
+    = submit_tag t('uploads.new_upload.upload')
