--- a/app/views/users/_user.haml
+++ b/app/views/users/_user.haml
@@ -1,7 +1,7 @@
 .user{:id => "user_#{user.id}"}
   .actions
     - unless @current_user == user
-      %span= link_to 'Remove from project', destroy_project_person_path(@current_project,user)
+      %span= link_to t('.remove_from_project'), destroy_project_person_path(@current_project,user)
   = thumb_avatar(user)
   .text
     .name= user.name
@@ -9,6 +9,6 @@
       = user.login + ','
       = mail_to user.email, user.email
     .address
-      = t('.formatted_address', :street => 'C/ Llacuna 162-164', :city => 'Barcelona', :country => 'Spain')
+      = t('.formatted_address', :street => 'C/ Bonsoms, 21', :city => 'Barcelona', :country => 'Spain')
     .phone
       +34 661 939 945
