--- a/app/views/uploads/_primer.haml
+++ b/app/views/uploads/_primer.haml
@@ -1,7 +1,7 @@
 #primer
   %p= t('.empty')
   .box
-    %h2= link_to t('.create_first'), new_project_task_list_path(project)
+    %h2= link_to_function t('.create_first'), show_new_upload_form
     %p= t '.define1'
     %p= t '.define2'
     %ul
