--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -19,7 +19,7 @@
         - if @content_for_banner
           .banner
             = yield :banner
-        %div{ :class => "#{@content_for_column.nil? ? 'content_wrap_single' : 'content_wrap'}" }
+        %div{ :class => @content_for_column.nil? ? 'content_wrap_single' : 'content_wrap' }
           .content#content
             = yield
         - if @content_for_column
