--- a/app/views/users/unconfirmed_email.haml
+++ b/app/views/users/unconfirmed_email.haml
@@ -4,7 +4,7 @@
 %p 
   = t('.follow_the_link')
 
-%h3= t('.problems')
+%h3= t('.problem')
 %ul
   %li
     = link_to t('.resend', :link => unconfirmed_email_user_path(current_user, :resend => true))
