--- a/app/views/task_lists/show.haml
+++ b/app/views/task_lists/show.haml
@@ -1,2 +1,3 @@
-= task_list_column(@current_project,@task_lists,@task_list)
+-content_for :column do
+  = task_list_column(@current_project,@task_lists,@task_list)
 = render_task_list_with_tasks(@current_project,@task_list)
