--- a/app/views/tasks/_task.haml
+++ b/app/views/tasks/_task.haml
@@ -1,6 +1,9 @@
 .task{ :id => task_id(:item,project,task_list,task), :class => "#{ 'active_task' if current_target == task } task_item" }
-  = task_status_image(task.status)
-  = task_drag_link(task)
+  -unless task.archived
+    = task_status_image(task.status)
+  -else
+    = task_status(task.status)
+  = task_drag_link(task) unless task.archived
   = #show_comments_count(task)
   = link_to task.name, project_task_list_task_path(project,task_list,task)
 .clear
