--- a/public/stylesheets/sass/pages.sass
+++ b/public/stylesheets/sass/pages.sass
@@ -70,21 +70,21 @@ div.active_page
 .show_pages
   .page_header
     :display block
-    :margin-bottom 20px
+    :margin-bottom 10px
     h2
       :font-size 16px
       :margin
-        :left 20px
+        :top 0px
         :bottom 3px
     .text_actions
+      :margin-top 5px
       :float right
       :font-size 12px
       :color rgb(200,200,200)
       a
         :text-decoration underline
-    .watching, .description
+    .description
       :font-size 12px
-      :margin-left 20px
       :color rgb(180,180,180)
   h3
     :font-size 18px
