--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -1,87 +1,151 @@
-.index_projects
-  .content
-    h2
-      :margin 5px 0 0 20px
+@media screen
+  .index_projects
+    .content
+      h2
+        :margin 5px 0 0 20px
 
-.show_projects, .index_task_lists
-  #activities
+  .show_projects, .index_task_lists
+    #activities
+      .comment
+        .name
+          .author
+          .project, .project_arr
+            :display none
+          .target, .target_arr
+
+  .index_conversations, .show_conversations, .show_tasks
     .comment
       .name
         .author
         .project, .project_arr
           :display none
         .target, .target_arr
+          :display none
 
-.index_conversations, .show_conversations, .show_tasks
-  .comment
-    .name
-      .author
-      .project, .project_arr
-        :display none
-      .target, .target_arr
-        :display none
+  .new_projects,.create_projects
+    .content
+      h2
+        :font-size 22px
+        :margin 10px
+          :right 0px
+        :padding
+          :bottom 5px
+        :border-bottom solid 2px rgb(240,240,240)
+    .column
+      :-moz-border-radius
+        :topright 5px
+      :-webkit-border-top-right-radius 5px  
+      :font-size 12px
+      p
+        :margin 0 0 5px 0
+      ul
+        :padding-left 20px
+        :margin-top 5px
+        li
+          :margin-bottom 3px
 
-.new_projects
-  .content 
-    h2, form
-      :margin-left 20px
-    form
-      :margin-bottom 20px
-  .column
-    :font-size 12px
-    p
-      :margin 0 0 5px 0
-    ul
-      :padding-left 20px
-      :margin-top 5px
-      li
-        :margin-bottom 3px
-
-form#new_project, form.edit_project
-  :border 1px solid rgb(220,220,220)
-  :padding 5px
-    :left 15px
-    :bottom 28px
-  :background rgb(240,240,240)
-  #project_name
-    :width 272px
-  #project_permalink
-    :width 140px
-
-.people_list
-  .person, .invite_people
-    :font-size 12px
-    :margin-left 10px
-    :padding-left 15px
-  .person
-    :background transparent url(/images/grey_dot.png) no-repeat scroll 0 4px
-  a
-    :color rgb(80,80,80)
-    :text-decoration none
-  a:hover
-    :text-decoration underline
-  .status
-    :float right
-    :color #777
-  .online
-    :background transparent url(/images/green_dot.png) no-repeat scroll 0 4px
-    .status
-      :display none
-  
-.project_list
-  :margin-top 15px
-  :font-size 12px
-  .project_link
-    .unread_comment_count
-      :float right
-      :font-weight normal
-  .new_project_link
+  form#new_project, form.edit_project
+    :padding
+      :left 10px
+    #project_name
+      :width 272px
+    #project_permalink
+      :width 140px
+    .preview
+      :font-size 12px
+      :padding 10px 0px
+        :top 20px
+      span
+        :font-weight bold
+    .good
+      :color rgb(0,140,0)
+    .bad
+      :color rgb(200,0,0)    
+  .people_list
+    .person, .invite_people
+      :font-size 12px
+      :margin-left 10px
+      :padding-left 15px
+    .person
+      :background transparent url(/images/grey_dot.png) no-repeat scroll 0 4px
     a
-      :color rgb(150,150,150)
-
-.subscribe
-  :margin-top 15px
-  a
+      :color rgb(80,80,80)
+      :text-decoration none
+    a:hover
+      :text-decoration underline
+    .status
+      :float right
+      :color #777
+    .online
+      :background transparent url(/images/green_dot.png) no-repeat scroll 0 4px
+      .status
+        :display none
+  
+  .project_list
+    :margin-top 15px
     :font-size 12px
-    :padding-left 25px
-    :background url(/images/feed.png) no-repeat left
+    .project_link
+      .unread_comment_count
+        :float right
+        :font-weight normal
+    .new_project_link
+      a
+        :color rgb(150,150,150)
+
+  .subscribe
+    :margin-top 15px
+    a
+      :font-size 12px
+      :padding-left 25px
+      :background url(/images/feed.png) no-repeat left
+
+@media print
+  .index_projects
+    .column
+      :display none
+    .info
+      :display none
+    h2
+      :font-size 20px
+      :border-bottom solid 3px rgb(0,0,0)
+      :padding-bottom 3px
+    .comment
+      :clear both
+      .block
+        :float none
+        :width 100%
+        .date
+          :color rgb(0,0,0)
+        .name
+          :border-bottom solid 1px rgb(0,0,0)
+          span
+            :color rgb(0,0,0)
+          a  
+            :color rgb(0,0,0)
+            :text-decoration none          
+          span.task_status
+            :background rgb(0,0,0)
+            :color rgb(255,255,255)
+            :border none
+            :-moz-border-radius 0px
+            :-webkit-border-radius 0px
+    .activity
+      :clear both
+      :color rgb(0,0,0)
+      .activity_icon
+        :display none
+      span
+        :color rgb(0,0,0)
+      .clear
+        :border-bottom solid 1px rgb(0,0,0)
+        :margin 0px
+      a  
+        :color rgb(0,0,0)
+        :text-decoration none        
+      .date
+        :color rgb(0,0,0)        
+    .upload    
+      .info
+        :display none
+      .thumbnail  
+        :display none      
